# nace_codes

./: pyproject.toml
pynace/: __init__.py  __main__.py  interface.py  models.py
pynace/db/: NACE_REV2_DE.csv  NACE_REV2_FI.csv
tests/: test_pynace.py
