[tool.poetry]
name = "pynace"
version = "0.1.0"
description = ""
authors = ["Mohammed Salman <mohammed@holvi.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
attrs = "^21.2.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
